# Delta

./: .gitignore  README.md  llms.md  llms.txt
.cursor/: settings.json
delta-mcp-server/: .env  Claude.txt  check_id  check_trade.py  delta_api_test.py  delta_official_test.py  direct_order.py  place_order.py  pyproject.toml  requirements.txt  server.py  test_connection.py  test_server.py  test_trade.py  test_verification.py
